# qintern2026-project-infrastructure

./: .gitignore  README.md  REFERENCE.md  infra.toml  pyproject.toml  terraform.tf
.github/workflows/: overleaf-automation.yaml  terraform.tf
.github/workflows/.github/workflows/: overleaf-automation.yaml
QMonitor/: classes.py  monitor.py
QMonitor/config/: credentials_config.py  experiment_config.py  master_config.py
QMonitor/logger/: logger.py
QMonitor/monitors/: error_codes.py
QMonitor/monitors/cloud/braket/: braket_monitor.py
QMonitor/monitors/cloud/ec2/: ec2_monitor.py
QMonitor/monitors/local/: local_monitor.py
src/: classes.py  main.py
src/config/: credentials_config.py  experiment_config.py  master_config.py
src/logger/: logger.py  results.py
src/monitors/: error_codes.py
src/monitors/cloud/braket/: braket_monitor.py
src/monitors/cloud/ec2/: ec2_monitor.py
src/monitors/local/: local_monitor.py
test_logs/: ec2_monitor_test_2026-07-19 22:40:19.553054.md  ec2_monitor_test_2026-07-19 22:41:19.629665.md  monitor_test_2026-07-19 22:27:09.152347.md
test_results/unit/: monitor_test0_2026-07-18  monitor_test0_<class 'datetime.datetime'>
tests/integration/: braket_monitor_test.py  ec2_monitor_test.py  integration_flow_test.py
tests/unit/: log_test.py  monitor_test.py
